--- a/.env
+++ b/.env
@@ -18,5 +18,6 @@ REDIS_PORT=6379
 
 MINIO_ACCESS_KEY_ID=access_key
 MINIO_SECRET_ACCESS_KEY=secret_key
-SERVICE_NAME=sname
+MINIO_HOST=localhost
+MINIO_PORT=9000
 MESSAGE_BUCKET=mbuck
