--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+LOG_LEVEL=INFO
+
 DB_HOST=localhost
 DB_PORT=5578
 DB_USER=postgres
@@ -18,7 +20,7 @@ REDIS_PORT=6379
 
 MINIO_ACCESS_KEY_ID=access_key
 MINIO_SECRET_ACCESS_KEY=secret_key
-MINIO_HOST=localhost
+MINIO_HOST=172.18.0.4
 MINIO_PORT=9000
 MESSAGE_BUCKET=mbuck
 PROFILE_BUCKET=pbuck
