Поправил момент с миграцией

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_HOST=localhost
 DB_PORT=5578
 DB_USER=postgres
 DB_PASS=postgres
-DB_NAME=agg_db
+DB_NAME=agg
 
 SECRET_KEY=Rya5hOXFJhoWku1tIfQPs2xWepYS2nJ5AZUYpWIm4uk=
 ALGORITHM=HS256
