Упаковал всё в Docker

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 LOG_LEVEL=INFO
 
-DB_HOST=localhost
-DB_PORT=5578
+DB_HOST=postgres
+DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=agg
@@ -9,13 +9,13 @@ DB_NAME=agg
 SECRET_KEY=Rya5hOXFJhoWku1tIfQPs2xWepYS2nJ5AZUYpWIm4uk=
 ALGORITHM=HS256
 
-MONGO_HOST=mongo
-MONGO_PORT=28017
+MONGO_HOST=mongodb
+MONGO_PORT=27017
 MONGO_USER=my_admin
 MONGO_PASS=my_password
 MONGO_NAME=messages
 
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 MINIO_ACCESS_KEY_ID=access_key
